// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Http Connect Creates a list of reporting handlers 1`] = `
Array [
  Array [
    "http_requests_total",
    1,
    Object {},
  ],
  Array [
    "http_request_duration_seconds",
    18,
    1,
    Object {},
  ],
]
`;

exports[`Http Connect Creates a list of reporting handlers 2`] = `
Object {
  "reporter": InMemoryReporter {
    "context": Context {
      "globalTags": Object {},
    },
    "format": Object {
      "format": [Function],
    },
    "increment": [MockFunction] {
      "calls": Array [
        Array [
          "http_requests_total",
          1,
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "reports": Array [],
    "timing": [MockFunction] {
      "calls": Array [
        Array [
          "http_request_duration_seconds",
          18,
          1,
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
  },
  "thisIs": "a request",
}
`;

exports[`Http Connect Overrides specific handler configuration 1`] = `
Array [
  Array [
    "what_another_stat",
    0.6,
    Object {
      "thisIs": "a_tag",
    },
  ],
  Array [
    "what_a_stat",
    20,
    0.8,
    Object {
      "thisIsNot": "the_same_tag",
    },
  ],
]
`;

exports[`Http Connect errorCountReporting Reports a count metric 1`] = `
Array [
  Array [
    "http_requests_errors_total",
    1,
    Object {},
  ],
]
`;

exports[`Http Connect errorCountReporting Reports a count metric with a getTags function 1`] = `
Array [
  Array [
    "http_requests_errors_total",
    1,
    Object {
      "tag": "one",
    },
  ],
]
`;

exports[`Http Connect errorCountReporting Reports a count metric with a sample rate 1`] = `
Array [
  Array [
    "http_requests_errors_total",
    0.5,
    Object {},
  ],
]
`;

exports[`Http Connect errorCountReporting Reports a count metric with a stat name 1`] = `
Array [
  Array [
    "error_count_stat",
    1,
    Object {},
  ],
]
`;

exports[`Http Connect requestCountReporting Reports a count metric 1`] = `
Array [
  Array [
    "http_requests_total",
    1,
    Object {},
  ],
]
`;

exports[`Http Connect requestCountReporting Reports a count metric with a getTags function 1`] = `
Array [
  Array [
    "http_requests_total",
    1,
    Object {
      "tag": "one",
    },
  ],
]
`;

exports[`Http Connect requestCountReporting Reports a count metric with a sample rate 1`] = `
Array [
  Array [
    "http_requests_total",
    0.5,
    Object {},
  ],
]
`;

exports[`Http Connect requestCountReporting Reports a count metric with a stat name 1`] = `
Array [
  Array [
    "count_stat",
    1,
    Object {},
  ],
]
`;

exports[`Http Connect requestReporter Adds the reporter to the req object 1`] = `
Object {
  "reporter": InMemoryReporter {
    "context": Context {
      "globalTags": Object {},
    },
    "format": Object {
      "format": [Function],
    },
    "reports": Array [],
  },
  "thisIs": "a request",
}
`;

exports[`Http Connect requestReporters count Returns a RequestHandler 1`] = `
Array [
  Array [
    "request-count-reporting",
    0.5,
    Object {
      "one": "tag",
    },
  ],
]
`;

exports[`Http Connect requestReporters errors Returns an ErrorHandler 1`] = `
Array [
  Array [
    "request-time-reporting",
    0.5,
    Object {
      "one": "tag",
    },
  ],
]
`;

exports[`Http Connect requestReporters reqReporter Adds the reporter to the req object 1`] = `
Object {
  "reporter": InMemoryReporter {
    "context": Context {
      "globalTags": Object {},
    },
    "format": Object {
      "format": [Function],
    },
    "reports": Array [],
  },
  "thisIs": "a request",
}
`;

exports[`Http Connect requestReporters timing Returns a ResponseTimeHandler 1`] = `
Array [
  Array [
    "request-time-reporting",
    18,
    0.5,
    Object {
      "one": "tag",
    },
  ],
]
`;

exports[`Http Connect requestTimeReporting Reports a time metric 1`] = `
Array [
  Array [
    "http_request_duration_seconds",
    18,
    1,
    Object {},
  ],
]
`;

exports[`Http Connect requestTimeReporting Reports a time metric with a getTags function 1`] = `
Array [
  Array [
    "http_request_duration_seconds",
    18,
    1,
    Object {
      "tag": "one",
    },
  ],
]
`;

exports[`Http Connect requestTimeReporting Reports a time metric with a sample rate 1`] = `
Array [
  Array [
    "http_request_duration_seconds",
    18,
    0.5,
    Object {},
  ],
]
`;

exports[`Http Connect requestTimeReporting Reports a time metric with a stat name 1`] = `
Array [
  Array [
    "time_stat",
    18,
    1,
    Object {},
  ],
]
`;
